Authen-SASL 2.10 -- Sat Mar 25 13:11:47 CST 2006

Enhancements
  * Added Authen::SASL::Perl::GSSAPI
  * Added error method to Authen::SASL to obtain error from last connection

Bug Fixes
  * Authen::SASL::Perl::DIGEST_MD5
    - Fixed response to server to pass digest-uri
    - Correct un-escaping behaviour when reading the challenge,
    - check for required fields (according to the RFC),
    - allow for qop not to be sent from the server (according to the RFC),
    - add a callback for the realm.

Authen-SASL 2.09 -- Tue Apr 26 06:55:10 CDT 2005

Enhancements
  * authname support in Authen::SASL::Perl::DIGEST_MD5
  * flexible plugin selection in Authen::SASL using import()
     i.e.    use Authen::SASL qw(Authen::SASL::Cyrus);
  * new documentation for
    - Authen::SASL::Perl::ANONYMOUS
    - Authen::SASL::Perl::CRAM_MD5
    - Authen::SASL::Perl::EXTERNAL
    - Authen::SASL::Perl::LOGIN
    - Authen::SASL::Perl::PLAIN
    - Authen::SASL::Perl
  * updates in the tests

Authen-SASL 2.08 -- Tue May 25 11:24:21 BST 2004

Bug Fixes
  * Fix the handling of qop in Digest-MD5

Authen-SASL 2.07 -- Sat Apr 10 09:06:21 BST 2004

Bug Fixes
  * Fixed test bug if Digest::HMAC_MD5 was not installed
  * Fixed order of values sent in the PLAIN mechanism

Enhancements
  * Added support in the framework for server-side plugins

2003-11-01 18:48  Graham Barr

	* lib/Authen/SASL.pm:

	Release 2.06
	
2003-10-21 19:59  Graham Barr

	* MANIFEST, lib/Authen/SASL/Perl.pm,
	lib/Authen/SASL/Perl/ANONYMOUS.pm,
	lib/Authen/SASL/Perl/CRAM_MD5.pm,
	lib/Authen/SASL/Perl/DIGEST_MD5.pm,
	lib/Authen/SASL/Perl/EXTERNAL.pm, lib/Authen/SASL/Perl/LOGIN.pm,
	lib/Authen/SASL/Perl/PLAIN.pm, t/order.t:

	Add ordering so we always pich the best of the available methods instead of
	just the first
	
2003-10-17 22:12  Graham Barr

	* lib/Authen/SASL.pm:

	Release 2.05
	
2003-10-17 22:06  Graham Barr

	* MANIFEST, Makefile.PL:

	use Module::Install to generate Makefile and add SIGNATURE and META.yml
	